добавил пару эндпоинтов по организации
